--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,9 +23,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/che"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+         android:theme="@android:style/Theme.Holo.Light">
         <meta-data
             android:name="com.amap.api.v2.apikey"
             android:value="cea83ecf05f65f5c16f19600245ac984" />
